--- a/Resources/translations/validators.en.yml
+++ b/Resources/translations/validators.en.yml
@@ -1,5 +1,5 @@
 
-arthem_fileupload:
+arthem_file:
     file:
         too_large: "The file is too large ({{ size }} {{ suffix }}). Allowed maximum size is {{ limit }} {{ suffix }}."
         mime_type: "The type of the file is invalid ({{ type }}). Allowed types are {{ types }}."
