add react file uploader

--- a/Resources/translations/ArthemFileBundle.en.yml
+++ b/Resources/translations/ArthemFileBundle.en.yml
@@ -2,8 +2,13 @@
 form:
     remove_file:
         label: Remove
+        confirm: Are you sure you want to delete this file?
     file:
-        browse: Browse
+        browse: Choose a file
+        drag: |
+            Drag files to upload here
+            or
+
     unknown_error_message: Sorry, an error has occured
     pending_uploads: Pending upload...
 
